@@ -7,16 +7,19 @@ import javax.servlet.http.HttpServletRequest;
 import org.apache.commons.beanutils.BeanUtils;
 
 public class FormUtil {
-	
+
 	@SuppressWarnings("unchecked")
 	public static <T> T toModel(Class<T> clazz, HttpServletRequest request) {
 		T object = null;
 		try {
-			object = clazz.newInstance();
+			object = clazz.getDeclaredConstructor().newInstance();
 			BeanUtils.populate(object, request.getParameterMap());
-		} catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
-			System.out.print(e.getMessage());
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException
+				| NoSuchMethodException | SecurityException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
 		}
+
 		return object;
 	}
 }
